changes in Biancas laptop

--- a/content/pages/people.html
+++ b/content/pages/people.html
@@ -100,6 +100,24 @@
 
 
 <div class="mem">
+	  <a href="besiakov.html"> 
+      <div class="mugshot" style="background-image: url(/img/yb_500.png);"></div>
+      <div class="info">
+        <h3>Yury Besiakov</h3>
+	
+        <p class="title">Bachelor Student. In my Bachelor thesis, I investigate Model Predictions: Parametric and stimuli category Influence on ODOG, LODOG, and FLODOG. </p>
+        <p class="blurb"></p>
+        <p class="blurb"></p>
+        <ul class='social-links'>
+          <li><a class='icon-mail' aria-label='Email' href="mailto:yury.besiakov@campus.tu-berlin.de"></a></li>
+        </ul>
+      </div>
+      </a>
+    </div>
+
+
+
+<div class="mem">
 	  <a href="boldt.html"> 
       <div class="mugshot" style="background-image: url(/img/platzhalter_frau_500.png);"></div>
       <div class="info">
