changes in Biancas laptop

--- a/content/pages/people.html
+++ b/content/pages/people.html
@@ -78,7 +78,7 @@
       <div class="info">
         <h3>Bianca del Mestre</h3>
 	
-        <p class="title">Secretary of Prof. Dr. Marianne Maertens</p>
+        <p class="title">Administrative Assistant of Prof. Dr. Marianne Maertens</p>
         <p class="blurb"></p>
         <p class="blurb"></p>
         <ul class='social-links'>
