--- a/content/pages/people.html
+++ b/content/pages/people.html
@@ -192,25 +192,6 @@
 
 
 <div class="mem">
-	  <a href="henze.html"> 
-      <div class="mugshot" style="background-image: url(/img/th_500.png);"></div>
-      <div class="info">
-        <h3>Tim Henze</h3>
-	
-        <p class="title">Bachelor Student. In my Bachelor thesis, I study frequency manipulation in complex images and evaluate an algorithm from Marius Krause's Bachelor thesis for controlling image contrast. </p>
-        <p class="blurb"></p>
-        <p class="blurb"></p>
-        <ul class='social-links'>
-          <li><a class='icon-mail' aria-label='Email' href="mailto:t.henze@campus.tu-berlin.de"></a></li>
-        </ul>
-      </div>
-      </a>
-    </div>
-
-
-
-
-<div class="mem">
 	  <a href="keil.html"> 
       <div class="mugshot" style="background-image: url(/img/sk_500.png);"></div>
       <div class="info">
@@ -275,26 +256,6 @@
         <p class="blurb"></p>
         <ul class='social-links'>
           <li><a class='icon-mail' aria-label='Email' href="mailto:clara.ollech@campus.tu-berlin.de"></a></li>
-        </ul>
-      </div>
-      </a>
-    </div>
-
-
-
-
-
-<div class="mem">
-	  <a href="schlesier.html"> 
-      <div class="mugshot" style="background-image: url(/img/ts_500.png);"></div>
-      <div class="info">
-        <h3>Tim Schlesier</h3>
-	
-        <p class="title">Bachelor Student. In my Bachelor thesis, building on an earlier Bachelor thesis by Savas Großmann, I study whether visual perception is more sensitive to edges or differences in brightness. </p>
-        <p class="blurb"></p>
-        <p class="blurb"></p>
-        <ul class='social-links'>
-          <li><a class='icon-mail' aria-label='Email' href="mailto:t.schlesier@campus.tu-berlin.de"></a></li>
         </ul>
       </div>
       </a>
@@ -524,6 +485,7 @@
   <h4><a href="files/theses/thesis_dexel.pdf">Felix Dexel</a></h4>
   <h4><a href="files/theses/thesis_grossmann.pdf">Savas Großmann</a></h4> 
   <h4>Tom Ravid Hausmann</h4>
+  <h4><a href="files/theses/thesis_henze.pdf">Tim Henze</a></h4>
   <h4><a href="files/theses/thesis_jain.pdf">Navdha Jain</a></h4>
   <h4><a href="files/theses/thesis_kestel.pdf">Nico Kestel</a></h4>
   <h4><a href="files/theses/thesis_kiran.pdf">Burak Kiran</a></h4>
@@ -535,6 +497,7 @@
   <h4><a href="files/theses/thesis_rogoza.pdf">Karol Rogoza</a></h4>
   <h4><a href="files/theses/thesis_scheibner.pdf">Lisa Scheibner</a></h4>
   <h4><a href="files/theses/thesis_schillen.pdf">Annalena Katharina Schillen</a></h4>
+  <h4><a href="files/theses/thesis_schlesier.pdf">Tim Schlesier</a></h4>
   <h4><a href="files/theses/thesis_schulze_broering.pdf">Hendrik Schulze Bröring</a></h4>
   <h4><a href="files/theses/thesis_simsek.pdf">Enis Can Simsek</a></h4>
   <h4><a href="files/theses/thesis_soerensen.pdf">Jarl-Sebastian Soerensen</a></h4>
