changes in Biancas laptop

--- a/content/pages/people.html
+++ b/content/pages/people.html
@@ -485,7 +485,7 @@
   <h4><a href="files/theses/thesis_dexel.pdf">Felix Dexel</a></h4>
   <h4><a href="files/theses/thesis_grossmann.pdf">Savas Großmann</a></h4> 
   <h4>Tom Ravid Hausmann</h4>
-  <h4><a href="files/theses/thesis_henze.pdf">Tim Henze</a></h4>
+  <h4>Tim Henze</h4>
   <h4><a href="files/theses/thesis_jain.pdf">Navdha Jain</a></h4>
   <h4><a href="files/theses/thesis_kestel.pdf">Nico Kestel</a></h4>
   <h4><a href="files/theses/thesis_kiran.pdf">Burak Kiran</a></h4>
