changes in Biancas laptop

--- a/content/pages/people.html
+++ b/content/pages/people.html
@@ -282,6 +282,25 @@
 
 
 
+
+<div class="mem">
+	  <a href="toledo.html"> 
+      <div class="mugshot" style="background-image: url(/img/ot_500.png);"></div>
+      <div class="info">
+        <h3>Ori Toledo Cohen</h3>
+	
+        <p class="title">Bachelor Student. In my Bachelor thesis, I investigate testing a unified framework for perceived magnitude and integrated sensitivity in White’s Illusion. </p>
+        <p class="blurb"></p>
+        <p class="blurb"></p>
+        <ul class='social-links'>
+          <li><a class='icon-mail' aria-label='Email' href="mailto:toledo-cohen@campus.tu-berlin.de"></a></li>
+        </ul>
+      </div>
+      </a>
+    </div>
+
+
+
 <div class="mem">
 	  <a href="widmer.html"> 
       <div class="mugshot" style="background-image: url(/img/rw_500.png);"></div>
