changes in Biancas laptop

--- a/content/pages/people.html
+++ b/content/pages/people.html
@@ -171,6 +171,23 @@
 
 
 
+<div class="mem">
+	   <a href="haase.html"> 
+      <div class="mugshot" style="background-image: url(/img/ch_500.png);"></div>
+      <div class="info">
+        <h3>Christian Haase</h3>
+	
+        <p class="title">Bachelor Student. In my Bachelor thesis, I am building a prototype to study modal completion under occlusion, to answer whether partially occluded objects are perceived in the same way in a real environment as in the digital experiment. </p>
+        <p class="blurb"></p>
+        <p class="blurb"></p>
+        <ul class='social-links'>
+          <li><a class='icon-mail' aria-label='Email' href="mailto:christian.haase.1@campus.tu-berlin.de"></a></li>
+        </ul>
+      </div>
+      </a>
+    </div>
+
+
 
 <div class="mem">
 	   <a href="haverkamp.html"> 
