--- a/content/pages/people.html
+++ b/content/pages/people.html
@@ -137,24 +137,6 @@
 
 
 <div class="mem">
-	  <a href="castro.html"> 
-      <div class="mugshot" style="background-image: url(/img/dc_500.png);"></div>
-      <div class="info">
-        <h3>Daniel Castro Sanchez</h3>
-	
-        <p class="title">Bachelor Student. In my Bachelor thesis, I study the investigation of brightness contrast perception: A comparison between e- and traditional paper and monitors. </p>
-        <p class="blurb"></p>
-        <p class="blurb"></p>
-        <ul class='social-links'>
-          <li><a class='icon-mail' aria-label='Email' href="mailto:daniel.castrosanchez@campus.tu-berlin.de"></a></li>
-        </ul>
-      </div>
-      </a>
-    </div>
-
-
-
-<div class="mem">
 	   <a href="haase.html"> 
       <div class="mugshot" style="background-image: url(/img/ch_500.png);"></div>
       <div class="info">
@@ -500,6 +482,7 @@
   <h4><a href="files/theses/thesis_bindermann.pdf">Marcus Bindermann</a></h4>
   <h4><a href="files/theses/thesis_borges.pdf">Filipe Borges</a></h4>
   <h4>Philip Brozicevic</h4>
+  <h4><a href="files/theses/thesis_castro.pdf">Daniel Castro Sanchez</a></h4>
   <h4><a href="files/theses/thesis_chamani.pdf">Sam Chamani</a></h4>
   <h4>Yasin Mehmet Cifci</h4>
   <h4><a href="files/theses/thesis_dexel.pdf">Felix Dexel</a></h4>
