changes in Biancas laptop

--- a/content/pages/people.html
+++ b/content/pages/people.html
@@ -117,24 +117,6 @@
 
 
 
-<div class="mem">
-	  <a href="boldt.html"> 
-      <div class="mugshot" style="background-image: url(/img/platzhalter_frau_500.png);"></div>
-      <div class="info">
-        <h3>Hannah Boldt</h3>
-	
-        <p class="title">Bachelor Student. In my Bachelor thesis, I study at which point does noise masking cause a layer scission. </p>
-        <p class="blurb"></p>
-        <p class="blurb"></p>
-        <ul class='social-links'>
-          <li><a class='icon-mail' aria-label='Email' href="mailto:h.boldt@campus.tu-berlin.de"></a></li>
-        </ul>
-      </div>
-      </a>
-    </div>
-
-
-
 
 <div class="mem">
 	   <a href="haase.html"> 
@@ -461,6 +443,7 @@
   <h4><a href="files/theses/thesis_allaham.pdf">Anas Allaham</a></h4>
   <h4><a href="files/theses/thesis_arifin.pdf">Hafidz Arifin</a></h4>
   <h4><a href="files/theses/thesis_bindermann.pdf">Marcus Bindermann</a></h4>
+  <h4><a href="files/theses/thesis_boldt.pdf">Hannah Boldt</a></h4>
   <h4><a href="files/theses/thesis_borges.pdf">Filipe Borges</a></h4>
   <h4>Philip Brozicevic</h4>
   <h4><a href="files/theses/thesis_castro.pdf">Daniel Castro Sanchez</a></h4>
