changes in Biancas laptop

--- a/content/pages/people.html
+++ b/content/pages/people.html
@@ -156,24 +156,6 @@
 
 
 <div class="mem">
-	  <a href="keil.html"> 
-      <div class="mugshot" style="background-image: url(/img/sk_500.png);"></div>
-      <div class="info">
-        <h3>Sebastian Keil</h3>
-	
-        <p class="title">Bachelor Student. In my Bachelor thesis, I'm studying two models of brightness perception - ODOG and BIWaM. The focus is to identify the differences between them. </p>
-        <p class="blurb"></p>
-        <p class="blurb"></p>
-        <ul class='social-links'>
-          <li><a class='icon-mail' aria-label='Email' href="mailto:sebastian.keil.1@campus.tu-berlin.de"></a></li>
-        </ul>
-      </div>
-      </a>
-    </div>
-
-
-
-<div class="mem">
 	  <a href="le.html"> 
       <div class="mugshot" style="background-image: url(/img/dl_500.png);"></div>
       <div class="info">
@@ -202,24 +184,6 @@
         <p class="blurb"></p>
         <ul class='social-links'>
           <li><a class='icon-mail' aria-label='Email' href="mailto:azer.mahjoub@campus.tu-berlin.de"></a></li>
-        </ul>
-      </div>
-      </a>
-    </div>
-
-
-
-
-<div class="mem">
-	  <a href="ollech.html"> 
-      <div class="mugshot" style="background-image: url(/img/co_500.png);"></div>
-      <div class="info">
-        <h3>Clara Ollech</h3>
-	
-        <p class="title">Bachelor Student. In my Bachelor thesis, I study how different parameters in stimuli influence the performance of computational models and where exactly these models differ. </p>
-        <p class="blurb"></p>
-        <ul class='social-links'>
-          <li><a class='icon-mail' aria-label='Email' href="mailto:clara.ollech@campus.tu-berlin.de"></a></li>
         </ul>
       </div>
       </a>
@@ -454,11 +418,13 @@
   <h4>Tom Ravid Hausmann</h4>
   <h4>Tim Henze</h4>
   <h4><a href="files/theses/thesis_jain.pdf">Navdha Jain</a></h4>
+  <h4>Sebastian Keil</h4>
   <h4><a href="files/theses/thesis_kestel.pdf">Nico Kestel</a></h4>
   <h4><a href="files/theses/thesis_kiran.pdf">Burak Kiran</a></h4>
   <h4><a href="files/theses/thesis_krause.pdf">Marius Krause</a></h4>	
   <h4>Marie-Elisabeth Makohl</h4>
   <h4><a href="files/theses/thesis_oezkaya.pdf">Iris Özkaya</a></h4>
+  <h4><a href="files/theses/thesis_ollech.pdf">Clara Ollech</a></h4>
   <h4><a href="files/theses/thesis_park.pdf">Ji Hyea Park</a></h4>
   <h4><a href="files/theses/thesis_rhein.pdf">Eduardo Luiz Rhein</a></h4>
   <h4><a href="files/theses/thesis_rogoza.pdf">Karol Rogoza</a></h4>
