changes in Biancas laptop

--- a/content/pages/people.html
+++ b/content/pages/people.html
@@ -418,7 +418,7 @@
   <h4>Tom Ravid Hausmann</h4>
   <h4>Tim Henze</h4>
   <h4><a href="files/theses/thesis_jain.pdf">Navdha Jain</a></h4>
-  <h4>Sebastian Keil</h4>
+  <h4><a href="files/theses/thesis_keil.pdf">Sebastian Keil</a></h4>
   <h4><a href="files/theses/thesis_kestel.pdf">Nico Kestel</a></h4>
   <h4><a href="files/theses/thesis_kiran.pdf">Burak Kiran</a></h4>
   <h4><a href="files/theses/thesis_krause.pdf">Marius Krause</a></h4>	
