changes in Biancas laptop

--- a/content/pages/people.html
+++ b/content/pages/people.html
@@ -228,27 +228,6 @@
 
 
 
-<div class="mem">
-	  <a href="zamanis.html"> 
-      <div class="mugshot" style="background-image: url(/img/kz_500.png);"></div>
-      <div class="info">
-        <h3>Konstantinos Zamanis</h3>
-	
-        <p class="title">Bachelor Student. In my Bachelor thesis, I study monitor calibration with unstable gamma function due to temperature dependency. </p>
-        <p class="blurb"></p>
-        <p class="blurb"></p>
-        <ul class='social-links'>
-          <li><a class='icon-mail' aria-label='Email' href="mailto:k.zamanis@campus.tu-berlin.de"></a></li>
-        </ul>
-      </div>
-      </a>
-    </div>
-
-
-
-
-
-
 
  </section>
 
@@ -437,6 +416,7 @@
   <h4><a href="files/theses/thesis_tukendorf.pdf">Marc Tukendorf</a></h4>
   <h4>Christian Wohlhaupt</h4>
   <h4><a href="files/theses/thesis_zabel.pdf">Jan Zabel</a></h4>
+  <h4><a href="files/theses/thesis_zamanis.pdf">Konstantinos Zamanis</a></h4>
   <h4><a href="files/theses/thesis_zhang.pdf">Wenwen Zhang</a></h4>
   <h4><a href="files/theses/thesis_zinke.pdf">Matti Zinke</a></h4>
   
