changes in Biancas laptop

--- a/content/pages/people.html
+++ b/content/pages/people.html
@@ -100,25 +100,6 @@
 
 
 <div class="mem">
-	  <a href="besiakov.html"> 
-      <div class="mugshot" style="background-image: url(/img/yb_500.png);"></div>
-      <div class="info">
-        <h3>Yury Besiakov</h3>
-	
-        <p class="title">Bachelor Student. In my Bachelor thesis, I investigate Model Predictions: Parametric and stimuli category Influence on ODOG, LODOG, and FLODOG. </p>
-        <p class="blurb"></p>
-        <p class="blurb"></p>
-        <ul class='social-links'>
-          <li><a class='icon-mail' aria-label='Email' href="mailto:yury.besiakov@campus.tu-berlin.de"></a></li>
-        </ul>
-      </div>
-      </a>
-    </div>
-
-
-
-
-<div class="mem">
 	   <a href="haase.html"> 
       <div class="mugshot" style="background-image: url(/img/ch_500.png);"></div>
       <div class="info">
@@ -203,24 +184,6 @@
         <p class="blurb"></p>
         <ul class='social-links'>
           <li><a class='icon-mail' aria-label='Email' href="mailto:toledo-cohen@campus.tu-berlin.de"></a></li>
-        </ul>
-      </div>
-      </a>
-    </div>
-
-
-
-<div class="mem">
-	  <a href="widmer.html"> 
-      <div class="mugshot" style="background-image: url(/img/rw_500.png);"></div>
-      <div class="info">
-        <h3>Rhea Widmer</h3>
-	
-        <p class="title">Bachelor Student. In my Bachelor thesis, I study improving trial selection for maximum likelihood conjoint measurement for psychophysical experiments. </p>
-        <p class="blurb"></p>
-        <p class="blurb"></p>
-        <ul class='social-links'>
-          <li><a class='icon-mail' aria-label='Email' href="mailto:rhea.widmer@campus.tu-berlin.de"></a></li>
         </ul>
       </div>
       </a>
@@ -385,6 +348,7 @@
 
   <h4><a href="files/theses/thesis_allaham.pdf">Anas Allaham</a></h4>
   <h4><a href="files/theses/thesis_arifin.pdf">Hafidz Arifin</a></h4>
+  <h4><a href="files/theses/thesis_besiakov.pdf">Yury Besiakov</a></h4>
   <h4><a href="files/theses/thesis_bindermann.pdf">Marcus Bindermann</a></h4>
   <h4><a href="files/theses/thesis_boldt.pdf">Hannah Boldt</a></h4>
   <h4><a href="files/theses/thesis_borges.pdf">Filipe Borges</a></h4>
@@ -414,6 +378,7 @@
   <h4><a href="files/theses/thesis_simsek.pdf">Enis Can Simsek</a></h4>
   <h4><a href="files/theses/thesis_soerensen.pdf">Jarl-Sebastian Soerensen</a></h4>
   <h4><a href="files/theses/thesis_tukendorf.pdf">Marc Tukendorf</a></h4>
+  <h4><a href="files/theses/thesis_widmer.pdf">Rhea Widmer</a></h4>
   <h4>Christian Wohlhaupt</h4>
   <h4><a href="files/theses/thesis_zabel.pdf">Jan Zabel</a></h4>
   <h4><a href="files/theses/thesis_zamanis.pdf">Konstantinos Zamanis</a></h4>
