changes in Biancas laptop

--- a/content/pages/people.html
+++ b/content/pages/people.html
@@ -172,6 +172,24 @@
 
 
 
+<div class="mem">
+	  <a href="schilling.html"> 
+      <div class="mugshot" style="background-image: url(/img/jes_500.png);"></div>
+      <div class="info">
+        <h3>Jessica Schilling</h3>
+	
+        <p class="title">Bachelor Student. In my Bachelor thesis, I examine the minimum number of pixels required for letters to be identifiable and to what extent contrast polarity influences this. </p>
+        <p class="blurb"></p>
+        <p class="blurb"></p>
+        <ul class='social-links'>
+          <li><a class='icon-mail' aria-label='Email' href="mailto:j.schilling.1@campus.tu-berlin.de"></a></li>
+        </ul>
+      </div>
+      </a>
+    </div>
+
+
+
 
 <div class="mem">
 	  <a href="toledo.html"> 
