changes in Biancas laptop

--- a/content/pages/people.html
+++ b/content/pages/people.html
@@ -117,24 +117,6 @@
 
 
 
-<div class="mem">
-	   <a href="haverkamp.html"> 
-      <div class="mugshot" style="background-image: url(/img/ah_500.png);"></div>
-      <div class="info">
-        <h3>Anna Haverkamp</h3>
-	
-        <p class="title">Master Student. In my Master thesis, I investigate whether the presumed mechanisms underlying human edge perception translate to natural images. </p>
-        <p class="blurb"></p>
-        <p class="blurb"></p>
-        <ul class='social-links'>
-          <li><a class='icon-mail' aria-label='Email' href="mailto:a.haverkamp@campus.tu-berlin.de"></a></li>
-        </ul>
-      </div>
-      </a>
-    </div>
-
-
-
 
 <div class="mem">
 	  <a href="le.html"> 
@@ -408,6 +390,7 @@
   <h2>Alumni - Master students</h2>
 
   <h4>Poulami Ghosh</h4>
+  <h4><a href="files/theses/thesis_haverkamp.pdf">Anna Haverkamp</a></h4>
   <h4>Shaohan Li</h4>
   <h4>Amanda Maiwald</h4>
   <h4>Yiqun Xiao</h4>
