changes in Biancas laptop

--- a/content/pages/people.html
+++ b/content/pages/people.html
@@ -137,6 +137,25 @@
 
 
 <div class="mem">
+	  <a href="roehl.html"> 
+      <div class="mugshot" style="background-image: url(/img/jr_500.png);"></div>
+      <div class="info">
+        <h3>Jannis Röhl</h3>
+	
+        <p class="title">Bachelor Student. In my Bachelor thesis, I relate discrimination with perceived magnitude on simultaneous brightness contrast displays in an experimental approach. </p>
+        <p class="blurb"></p>
+        <p class="blurb"></p>
+        <ul class='social-links'>
+          <li><a class='icon-mail' aria-label='Email' href="mailto:j.roehl.1@campus.tu-berlin.de"></a></li>
+        </ul>
+      </div>
+      </a>
+    </div>
+
+
+
+
+<div class="mem">
 	  <a href="schilling.html"> 
       <div class="mugshot" style="background-image: url(/img/jes_500.png);"></div>
       <div class="info">
