--- a/content/pages/people.html
+++ b/content/pages/people.html
@@ -174,25 +174,6 @@
 
 
 
-<div class="mem">
-	  <a href="toledo.html"> 
-      <div class="mugshot" style="background-image: url(/img/ot_500.png);"></div>
-      <div class="info">
-        <h3>Ori Toledo Cohen</h3>
-	
-        <p class="title">Bachelor Student. In my Bachelor thesis, I investigate testing a unified framework for perceived magnitude and integrated sensitivity in White’s Illusion. </p>
-        <p class="blurb"></p>
-        <p class="blurb"></p>
-        <ul class='social-links'>
-          <li><a class='icon-mail' aria-label='Email' href="mailto:toledo-cohen@campus.tu-berlin.de"></a></li>
-        </ul>
-      </div>
-      </a>
-    </div>
-
-
-
-
  </section>
 
 
@@ -379,6 +360,7 @@
   <h4><a href="files/theses/thesis_schulze_broering.pdf">Hendrik Schulze Bröring</a></h4>
   <h4><a href="files/theses/thesis_simsek.pdf">Enis Can Simsek</a></h4>
   <h4><a href="files/theses/thesis_soerensen.pdf">Jarl-Sebastian Soerensen</a></h4>
+  <h4><a href="files/theses/thesis_toledo_cohen.pdf">Ori Toledo Cohen</a></h4>
   <h4><a href="files/theses/thesis_tukendorf.pdf">Marc Tukendorf</a></h4>
   <h4><a href="files/theses/thesis_widmer.pdf">Rhea Widmer</a></h4>
   <h4>Christian Wohlhaupt</h4>
