changes in Biancas laptop

--- a/content/pages/people.html
+++ b/content/pages/people.html
@@ -137,6 +137,24 @@
 
 
 <div class="mem">
+	  <a href="moebis.html"> 
+      <div class="mugshot" style="background-image: url(/img/m_moe_500.png);"></div>
+      <div class="info">
+        <h3>Matheo Möbis</h3>
+	
+        <p class="title">Bachelor Student. In my Bachelor thesis, I am testing an algorithm that detects T-Junctions in images and examine how it behaves when confronted with noise. </p>
+        <p class="blurb"></p>
+        <p class="blurb"></p>
+        <ul class='social-links'>
+          <li><a class='icon-mail' aria-label='Email' href="mailto:m.moebis@campus.tu-berlin.de"></a></li>
+        </ul>
+      </div>
+      </a>
+    </div>
+
+
+
+<div class="mem">
 	  <a href="roehl.html"> 
       <div class="mugshot" style="background-image: url(/img/jr_500.png);"></div>
       <div class="info">
