changes in Biancas laptop

--- a/content/pages/people.html
+++ b/content/pages/people.html
@@ -117,18 +117,17 @@
 
 
 
-
 <div class="mem">
-	  <a href="mahjoub.html"> 
-      <div class="mugshot" style="background-image: url(/img/am_500.png);"></div>
+	   <a href="lottermoser.html"> 
+      <div class="mugshot" style="background-image: url(/img/ll_500.png);"></div>
       <div class="info">
-        <h3>Azer Mahjoub</h3>
+        <h3>Lennart Lottermoser</h3>
 	
-        <p class="title">Bachelor Student. In my Bachelor thesis, I study Weather's Cinematic Influence: Analyzing the Genre Preferences. </p>
+        <p class="title">Bachelor Student. In my Bachelor thesis, I study how edge perception in real three-dimensional scenes differs from edge perception in two-dimensional photographic representations of a scene, using drawing tasks. </p>
         <p class="blurb"></p>
         <p class="blurb"></p>
         <ul class='social-links'>
-          <li><a class='icon-mail' aria-label='Email' href="mailto:azer.mahjoub@campus.tu-berlin.de"></a></li>
+          <li><a class='icon-mail' aria-label='Email' href="mailto:l.lottermoser@campus.tu-berlin.de"></a></li>
         </ul>
       </div>
       </a>
@@ -366,6 +365,7 @@
   <h4><a href="files/theses/thesis_kiran.pdf">Burak Kiran</a></h4>
   <h4><a href="files/theses/thesis_krause.pdf">Marius Krause</a></h4>
   <h4>Duc Phan Anh Le</h4>
+  <h4>Azer Mahjoub</h4>
   <h4>Marie-Elisabeth Makohl</h4>
   <h4><a href="files/theses/thesis_oezkaya.pdf">Iris Özkaya</a></h4>
   <h4><a href="files/theses/thesis_ollech.pdf">Clara Ollech</a></h4>
