changes in Biancas laptop

--- a/content/pages/people.html
+++ b/content/pages/people.html
@@ -72,6 +72,24 @@
 
 
 
+ <div class="mem">
+		<a href="schoenmann.html"> 
+      <div class="mugshot" style="background-image: url(/img/is_500.png);"></div>
+      <div class="info">
+        
+        <h3>Inés Schönmann</h3>
+       
+        <p class="title">Ph.D. student. I focus on studying human visual perception in a way that it reflects the realities of biological and behavioural data while also relating meaningfully to the human experience. Furthermore, I am interested in the role predictive processes play when processing language in naturalistic settings. </p>
+        <p class="blurb"></p>
+        <ul class='social-links'>
+          <li><a class='icon-mail' aria-label='Email' href="mailto:i.schoenmann@tu-berlin.de"></a></li>
+        </ul>
+      </div>
+       </a>
+    </div>
+
+
+
     <div class="mem">
 	  <a href="delmestre.html"> 
       <div class="mugshot" style="background-image: url(/img/bm_500.png);"></div>
