changes in Biancas laptop

--- a/content/pages/people.html
+++ b/content/pages/people.html
@@ -383,7 +383,7 @@
   <h4><a href="files/theses/thesis_kiran.pdf">Burak Kiran</a></h4>
   <h4><a href="files/theses/thesis_krause.pdf">Marius Krause</a></h4>
   <h4>Duc Phan Anh Le</h4>
-  <h4>Azer Mahjoub</h4>
+  <h4><a href="files/theses/thesis_mahjoub.pdf">Azer Mahjoub</a></h4>
   <h4>Marie-Elisabeth Makohl</h4>
   <h4><a href="files/theses/thesis_oezkaya.pdf">Iris Özkaya</a></h4>
   <h4><a href="files/theses/thesis_ollech.pdf">Clara Ollech</a></h4>
