--- a/content/pages/people.html
+++ b/content/pages/people.html
@@ -118,24 +118,6 @@
 
 
 <div class="mem">
-	   <a href="haase.html"> 
-      <div class="mugshot" style="background-image: url(/img/ch_500.png);"></div>
-      <div class="info">
-        <h3>Christian Haase</h3>
-	
-        <p class="title">Bachelor Student. In my Bachelor thesis, I am building a prototype to study modal completion under occlusion, to answer whether partially occluded objects are perceived in the same way in a real environment as in the digital experiment. </p>
-        <p class="blurb"></p>
-        <p class="blurb"></p>
-        <ul class='social-links'>
-          <li><a class='icon-mail' aria-label='Email' href="mailto:christian.haase.1@campus.tu-berlin.de"></a></li>
-        </ul>
-      </div>
-      </a>
-    </div>
-
-
-
-<div class="mem">
 	   <a href="lottermoser.html"> 
       <div class="mugshot" style="background-image: url(/img/ll_500.png);"></div>
       <div class="info">
@@ -375,6 +357,7 @@
   <h4>Yasin Mehmet Cifci</h4>
   <h4><a href="files/theses/thesis_dexel.pdf">Felix Dexel</a></h4>
   <h4><a href="files/theses/thesis_grossmann.pdf">Savas Großmann</a></h4> 
+  <h4><a href="files/theses/thesis_haase.pdf">Christian Haase</a></h4>
   <h4>Tom Ravid Hausmann</h4>
   <h4>Tim Henze</h4>
   <h4><a href="files/theses/thesis_jain.pdf">Navdha Jain</a></h4>
