changes in Biancas laptop

--- a/content/pages/people.html
+++ b/content/pages/people.html
@@ -299,7 +299,7 @@
       <div class="mugshot" style="background-image: url(/img/ls_500_3.png);"></div>
       <div class="info">
         <h3>Lynn Schmittwilken, Ph.D.</h3>
-        <p class="blurb">Lynn worked with us as a Ph.D. student for 5 years and finished her Ph.D. in our group. Currently Lynn workes at TU Darmstadt.</p>
+        <p class="blurb">Lynn worked with us as a Ph.D. student for 5 years and finished her Ph.D. in our group. Lynn is currently working at TU Darmstadt.</p>
         <ul class='social-links'>
         </ul>
       </div>
