changes in Biancas laptop

--- a/content/pages/people.html
+++ b/content/pages/people.html
@@ -102,6 +102,26 @@
 
 
 <div class="mem">
+	  <a href="kogge.html"> 
+      <div class="mugshot" style="background-image: url(/img/nk2_500.png);"></div>
+      <div class="info">
+        <h3>Noah Kogge</h3>
+	
+        <p class="title">Bachelor Student. In my Bachelor thesis, I examine how spatial dimensionality influences perceptual structure, stability and consistency of similarity judgements combining behavioral data with quantitative metrics, to compare two- and three-dimensional representations. </p>
+        <p class="blurb"></p>
+        <p class="blurb"></p>
+        <ul class='social-links'>
+          <li><a class='icon-mail' aria-label='Email' href="mailto: n.kogge@campus.tu-berlin.de"></a></li>
+        </ul>
+      </div>
+      </a>
+    </div>
+
+
+
+
+
+<div class="mem">
 	   <a href="lottermoser.html"> 
       <div class="mugshot" style="background-image: url(/img/ll_500.png);"></div>
       <div class="info">
