changes in Biancas laptop

--- a/content/pages/people.html
+++ b/content/pages/people.html
@@ -100,6 +100,24 @@
   <section class="members">
  
 
+<div class="mem">
+	  <a href="hafner.html"> 
+      <div class="mugshot" style="background-image: url(/img/lh_500.png);"></div>
+      <div class="info">
+        <h3>Leila Hafner</h3>
+	
+        <p class="title">Bachelor Student. In my Bachelor’s thesis, I examine how colour and orientation of a grating influence the perceived contrast of a central stimulus. </p>
+        <p class="blurb"></p>
+        <p class="blurb"></p>
+        <ul class='social-links'>
+          <li><a class='icon-mail' aria-label='Email' href="mailto: leila.letitia.hafner@campus.tu-berlin.de"></a></li>
+        </ul>
+      </div>
+      </a>
+    </div>
+
+
+
 
 <div class="mem">
 	  <a href="kogge.html"> 
@@ -150,24 +168,6 @@
         <p class="blurb"></p>
         <ul class='social-links'>
           <li><a class='icon-mail' aria-label='Email' href="mailto:m.moebis@campus.tu-berlin.de"></a></li>
-        </ul>
-      </div>
-      </a>
-    </div>
-
-
-
-<div class="mem">
-	  <a href="roehl.html"> 
-      <div class="mugshot" style="background-image: url(/img/jr_500.png);"></div>
-      <div class="info">
-        <h3>Jannis Röhl</h3>
-	
-        <p class="title">Bachelor Student. In my Bachelor thesis, I relate discrimination with perceived magnitude on simultaneous brightness contrast displays in an experimental approach. </p>
-        <p class="blurb"></p>
-        <p class="blurb"></p>
-        <ul class='social-links'>
-          <li><a class='icon-mail' aria-label='Email' href="mailto:j.roehl.1@campus.tu-berlin.de"></a></li>
         </ul>
       </div>
       </a>
@@ -388,6 +388,7 @@
   <h4><a href="files/theses/thesis_ollech.pdf">Clara Ollech</a></h4>
   <h4><a href="files/theses/thesis_park.pdf">Ji Hyea Park</a></h4>
   <h4><a href="files/theses/thesis_rhein.pdf">Eduardo Luiz Rhein</a></h4>
+  <h4>Jannis Röhl</h4>
   <h4><a href="files/theses/thesis_rogoza.pdf">Karol Rogoza</a></h4>
   <h4><a href="files/theses/thesis_scheibner.pdf">Lisa Scheibner</a></h4>
   <h4><a href="files/theses/thesis_schillen.pdf">Annalena Katharina Schillen</a></h4>
