changes in Biancas laptop

--- a/content/pages/people.html
+++ b/content/pages/people.html
@@ -388,7 +388,7 @@
   <h4><a href="files/theses/thesis_ollech.pdf">Clara Ollech</a></h4>
   <h4><a href="files/theses/thesis_park.pdf">Ji Hyea Park</a></h4>
   <h4><a href="files/theses/thesis_rhein.pdf">Eduardo Luiz Rhein</a></h4>
-  <h4>Jannis Röhl</h4>
+  <h4><a href="files/theses/thesis_roehl.pdf">Jannis Röhl</a></h4>
   <h4><a href="files/theses/thesis_rogoza.pdf">Karol Rogoza</a></h4>
   <h4><a href="files/theses/thesis_scheibner.pdf">Lisa Scheibner</a></h4>
   <h4><a href="files/theses/thesis_schillen.pdf">Annalena Katharina Schillen</a></h4>
